--- a/www/src/main/resources/templates/place/traverserStory.html
+++ b/www/src/main/resources/templates/place/traverserStory.html
@@ -34,6 +34,7 @@
 			
 		<div class="box-container">
 		
+		<a href="/place/reviews">
 		 <div class="box box1">
 			<div class="inner-box top-left">
 				<img src="/image/d1.jpg">
@@ -50,7 +51,9 @@
 				<img src="/image/d0.jpg">
 			</div>
 		 </div>
+		 </a>
 		 
+		 <a href="/">
 		 <div class="box box2">
 		 <div class="inner-box top-left">
 				<img src="/image/s1.jpg">
@@ -67,7 +70,9 @@
 				<img src="/image/s0.jpg">
 			</div>
 		 </div>
+		 </a>
 		 
+		 <a href="/">
 		 <div class="box box3">
 			<div class="inner-box top">
 				<img src="/image/l1.jpg">
@@ -81,7 +86,9 @@
 				<img src="/image/l0.jpg">
 			</div>
 		 </div>
+		 </a>
 		 
+		 <a href="/">
 		 <div class="box box4">
 		 	<div class="inner-box top-left">
 				<img src="/image/b1.jpg">
@@ -95,10 +102,14 @@
     		<div class="text-line line3"># 제주, 2박 3일</div>
 			</div>
 			<div class="inner-box center">
-				<img src="/image/b0.jpg">
+				<img src="/image/b4.jpg">
 			</div>
 		 </div>
-    </div>
+		 </a>
+    
+</div>
+</div>
+</div>
 
 		<th:block th:replace="/fragment::footer"></th:block>
 	
