--- a/www/src/main/resources/static/css/homeStyle.css
+++ b/www/src/main/resources/static/css/homeStyle.css
@@ -39,67 +39,6 @@
     0.5px  0.5px 0 #4BB958;
 }
 
-.sidebar-left {
-    width: 12%;
-    height: auto; /* 사이드바 높이를 콘텐츠에 맞게 조정 */
-    position: absolute;
-    top: 40%;
-    left: 25px;
-    transform: translateY(-50%);
-    background-color: #f9f9f9; /* 배경색을 약간 더 밝게 */
-    border-right: 1px solid #ccc;
-    padding: 20px; /* 패딩을 늘려서 여유 공간 확보 */
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* 사이드바에 그림자 추가 */
-    border-radius: 10px; /* 모서리를 둥글게 처리 */
-    z-index: 1000;
-    min-width: 150px; /* 최소 너비를 조정 */
-    max-width: 300px; /* 최대 너비 설정 */
-    font-size: 15px;
-    color: #333; /* 글씨 색상을 어두운 회색으로 설정 */
-}
-
-.sidebar-left .weather-info {
-    font-size: 13px; /* 날씨 정보의 글자 크기 조정 */
-}
-
-.sidebar-left select, .sidebar-left h1 {
-    font-size: 24px; /* 제목 글자 크기 키움 */
-    font-weight: bold;
-    color: #2A3854; /* 로고 색상과 맞춤 */
-    margin-bottom: 20px; /* 제목 아래 여백 추가 */
-    text-align: center; /* 제목을 가운데 정렬 */
-}
-
-.sidebar-left .weather-info div {
-    margin-bottom: 10px; /* 각 정보 사이에 간격 추가 */
-    font-size: 16px; /* 글자 크기를 약간 키움 */
-    color: #555; /* 텍스트 색상을 중간 회색으로 설정 */
-}
-
-.sidebar-left .weather-info div span {
-    font-weight: bold; /* 정보 제목을 굵게 표시 */
-    color: #2A3854; /* 정보 제목 색상을 강조 */
-}
-
-.sidebar-left select {
-    width: 100%; /* 선택 박스가 사이드바 너비에 맞도록 */
-    padding: 8px;
-    font-size: 16px; /* 글자 크기를 약간 키움 */
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    margin-bottom: 20px; /* 선택 박스 아래 여백 추가 */
-    background-color: #fff;
-    color: #333;
-    outline: none;
-}
-
-.sidebar-left select:hover {
-    border-color: #2A3854; /* 선택 박스에 호버 시 테두리 색 변경 */
-}
-
-.sidebar-left .weather-info {
-    text-align: left; /* 날씨 정보 텍스트를 왼쪽 정렬 */
-}
 
 
 
@@ -240,7 +179,7 @@
 
 
   /* 제목 스타일 */
-  .title {
+.title {
     font-size: 30px;
     font-weight: bold;
     margin-bottom: 10px;
@@ -248,21 +187,22 @@
   }
 
   /* 슬라이드 컨테이너 */
-  .slider-container {
+.slider-container {
     position: relative;
-    width: 100%;
+    width: 80%;
     height: 450px;
     overflow: hidden;
+    margin: 0 auto;
   }
 
   /* 각 슬라이드 이미지 */
-  .slide {
+.slide {
     position: absolute;
     width: 100%;
     height: 100%;
     object-fit: cover;
     opacity: 0;
-    animation: slideUp 16s infinite;
+    animation: slideUp 18s infinite;
   }
   
     /* 이미지 애니메이션 */
@@ -275,13 +215,20 @@
   }
 
   /* 각 이미지에 다른 타이밍으로 애니메이션 시작 */
-  .slide:nth-child(1) { animation-delay: 0s; }
-  .slide:nth-child(2) { animation-delay: 4s; }
-  .slide:nth-child(3) { animation-delay: 8s; }
-  .slide:nth-child(4) { animation-delay: 12s; }
+.slide:nth-child(1) { animation-delay: 0s; }
+.slide:nth-child(2) { animation-delay: 3s; }
+.slide:nth-child(3) { animation-delay: 6s; }
+.slide:nth-child(4) { animation-delay: 9s; }
+.slide:nth-child(5) { animation-delay: 12s; }
+.slide:nth-child(6) { animation-delay: 15s; }
+
+#checkboxForm {
+	width: 80%;
+	margin: 0 auto;
+}
 
   /* 버튼 스타일 */
-  .checkbox-button {
+.checkbox-button {
     display: inline-block;
     padding: 10px 30px;
     background-color: #2A3854;
@@ -290,18 +237,23 @@
     cursor: pointer;
     border-radius: 30px;
     transition: background-color 0.3s;
-    margin: 5px 10px;
+    margin: 5px 18px;
     font-size: 18px;
     font-weight: bold;
   }
 
+.ggcheck .checkbox-button {
+	padding: 8px 25px;
+	margin: 4px 12px;
+}
+
   /* 체크박스가 체크되었을 때 버튼 스타일 */
-  .checked {
+.checked {
     background-color: #E27D24;
   }
   
    /* 제출 버튼 스타일 */
-  .submit-button {
+.submit-button {
     display: inline-block;
     padding: 10px 20px;
     background-color: #007bff;
