--- a/www/src/main/resources/static/css/traverserStoryStyle.css
+++ b/www/src/main/resources/static/css/traverserStoryStyle.css
@@ -104,8 +104,8 @@
 
 .inner-box {
   position: absolute;
-  background-color: #B898F4;
-  border: 1px solid black; /* 검정색 테두리 추가 */
+  background-color: #E2E2E2;
+  /*border: 1px solid black; /* 검정색 테두리 추가 */
   overflow: hidden;
   padding: 10px;
 }
