--- a/www/src/main/resources/templates/jeonbuk.html
+++ b/www/src/main/resources/templates/jeonbuk.html
@@ -10,190 +10,118 @@
 </head>
 <body>
 
-	<input type="checkbox" id="menuicon">
-	<header>
-		<div>
-			<ul class="navi">
-				<li><a href="/"><img class="logo" th:src="@{/image/logo_w.png}"></a></li>
-				<li th:if="${session.user == null}">
-					<a href="/member/login">login</a>
-				</li>
-				<li th:if="${session.user != null}">
-					<a href="/member/myPage">myPage</a>
-				</li>
-		  </ul>
-		  
-		  <label for="menuicon" class="menubtn">
-		  	<span></span>
-		  	<span></span>
-		  	<span></span>
-		  </label>
-		</div>
-	</header>
+	<th:block th:replace="/fragment::header"></th:block>
 	
 	<div class="container">
 		<div class="contents">
-			<span class="area_desc">
-				<img class="regionimg" th:src="@{/image/jeonbuk1.png}">
 				
-				<form id="locationForm" method="POST" onsubmit="return validateForm()">
+				<div class="title">【전북】</div>
 				
-				<label class="container1" style="top: 28%; left: 27%;">
-					<div id="displayText1" class="display-text" style="display: none;">군산</div>
-				  <input type="checkbox" id="checkbox1" name="jeonbuk" value="2">
-				  <div class="checkmark1"></div>
-				</label>
+				<div class="slider-container">
+				  <img th:src="@{/image/region/전북 대표이미지1.jpg}" class="slide">
+				  <img th:src="@{/image/region/전북 대표이미지2.jpg}" class="slide">
+				  <img th:src="@{/image/region/전북 대표이미지3.jpg}" class="slide">
+				  <img th:src="@{/image/region/전북 대표이미지4.jpg}" class="slide">
+				  <img th:src="@{/image/region/전북 대표이미지5.jpg}" class="slide">
+				  <img th:src="@{/image/region/전북 대표이미지6.jpg}" class="slide">
+				</div>
 				
-				<label class="container1" style="top: 22%; left: 41%;">
-					<div id="displayText2" class="display-text" style="display: none;">익산</div>
-				  <input type="checkbox" id="checkbox2" name="jeonbuk" value="9">
-				  <div class="checkmark1"></div>
-				</label>
+				<br>
 				
-				<label class="container1" style="top: 38%; left: 35%;">
-					<div id="displayText3" class="display-text" style="display: none;">김제</div>
-				  <input type="checkbox" id="checkbox3" name="jeonbuk" value="3">
-				  <div class="checkmark1"></div>
-				</label>
+<!-- 폼 시작 -->
+<form id="checkboxForm" method="post" onsubmit="return validateForm()">
+  <!-- 첫 번째 버튼과 체크박스 -->
+  <input name="jeonbuk" value="1" type="checkbox" id="checkbox1" style="display:none;">
+  <button type="button" id="button1" class="checkbox-button">고창</button>
+
+  <!-- 두 번째 버튼과 체크박스 -->
+  <input name="jeonbuk" value="2" type="checkbox" id="checkbox2" style="display:none;">
+  <button type="button" id="button2" class="checkbox-button">군산</button>
+
+  <!-- 세 번째 버튼과 체크박스 -->
+  <input name="jeonbuk" value="3" type="checkbox" id="checkbox3" style="display:none;">
+  <button type="button" id="button3" class="checkbox-button">김제</button>
+
+  <!-- 네 번째 버튼과 체크박스 -->
+  <input name="jeonbuk" value="4" type="checkbox" id="checkbox4" style="display:none;">
+  <button type="button" id="button4" class="checkbox-button">남원</button>
+
+  <!-- 다섯 번째 버튼과 체크박스 -->
+  <input name="jeonbuk" value="5" type="checkbox" id="checkbox5" style="display:none;">
+  <button type="button" id="button5" class="checkbox-button">무주</button>
+ 
+  <input name="jeonbuk" value="6" type="checkbox" id="checkbox6" style="display:none;">
+  <button type="button" id="button6" class="checkbox-button">부안</button>
+
+  <input name="jeonbuk" value="7" type="checkbox" id="checkbox7" style="display:none;">
+  <button type="button" id="button7" class="checkbox-button">순창</button>
+
+  <input name="jeonbuk" value="8" type="checkbox" id="checkbox8" style="display:none;">
+  <button type="button" id="button8" class="checkbox-button">완주</button>
+
+  <input name="jeonbuk" value="9" type="checkbox" id="checkbox9" style="display:none;">
+  <button type="button" id="button9" class="checkbox-button">익산</button>
+
+  <input name="jeonbuk" value="10" type="checkbox" id="checkbox10" style="display:none;">
+  <button type="button" id="button10" class="checkbox-button">임실</button>
+
+  <input name="jeonbuk" value="11" type="checkbox" id="checkbox11" style="display:none;">
+  <button type="button" id="button11" class="checkbox-button">장수</button>
+
+  <input name="jeonbuk" value="12" type="checkbox" id="checkbox12" style="display:none;">
+  <button type="button" id="button12" class="checkbox-button">전주</button>
+
+  <input name="jeonbuk" value="13" type="checkbox" id="checkbox13" style="display:none;">
+  <button type="button" id="button13" class="checkbox-button">정읍</button>
+
+  <input name="jeonbuk" value="14" type="checkbox" id="checkbox14" style="display:none;">
+  <button type="button" id="button14" class="checkbox-button">진안</button>
+
+  <!-- 폼 제출 버튼 -->
+    <button type="submit" class="submit-button">Submit</button>
+</form>
+
+<script>
+  const maxSelections = 1;
+
+  document.querySelectorAll('.checkbox-button').forEach((button, index) => {
+    const checkbox = document.getElementById(`checkbox${index + 1}`);
+
+    button.addEventListener('click', function() {
+      const checkedCheckboxes = document.querySelectorAll('input[type="checkbox"]:checked').length;
+
+      // 체크박스 상태를 반전시킴
+      checkbox.checked = !checkbox.checked;
+
+      // 체크박스 상태에 따라 버튼 스타일 변경
+      if (checkbox.checked) {
+        button.classList.add('checked');
+      } else {
+        button.classList.remove('checked');
+      }
+    });
+  });
+
+  function validateForm() {
+    const checkedCheckboxes = document.querySelectorAll('input[type="checkbox"]:checked').length;
+    
+    if (checkedCheckboxes === 0) {
+      alert('최소 1개 이상의 항목을 선택해주세요.');
+      return false;
+    }
+
+    if (checkedCheckboxes > maxSelections) {
+      alert('최대 1개 항목만 선택할 수 있습니다.');
+      return false;
+    }
+
+    return true;
+  }
+</script>
 				
-				<label class="container1" style="top: 30%; left: 54%;">
-					<div id="displayText4" class="display-text" style="display: none;">완주</div>
-				  <input type="checkbox" id="checkbox4" name="jeonbuk" value="8">
-				  <div class="checkmark1"></div>
-				</label>
-				
-				<label class="container1" style="top: 40%; left: 66%;">
-					<div id="displayText5" class="display-text" style="display: none;">진안</div>
-			    <input type="checkbox" id="checkbox5" name="jeonbuk" value="14">
-			    <div class="checkmark1"></div>
-				</label>
-				
-				<label class="container1" style="top: 50%; left: 21%;">
-					<div id="displayText6" class="display-text" style="display: none;">부안</div>
-			    <input type="checkbox" id="checkbox6" name="jeonbuk" value="6">
-			    <div class="checkmark1"></div>
-				</label>
-				
-				<label class="container1" style="top: 57%; left: 34%;">
-					<div id="displayText7" class="display-text" style="display: none;">정읍</div>
-			    <input type="checkbox" id="checkbox7" name="jeonbuk" value="13">
-			    <div class="checkmark1"></div>
-				</label>
-				
-				<label class="container1" style="top: 37%; left: 47%;">
-					<div id="displayText8" class="display-text" style="display: none;">전주</div>
-			    <input type="checkbox" id="checkbox8" name="jeonbuk" value="12">
-			    <div class="checkmark1"></div>
-				</label>
-				
-				<label class="container1" style="top: 58%; left: 54%;">
-					<div id="displayText9" class="display-text" style="display: none;">임실</div>
-			    <input type="checkbox" id="checkbox9" name="jeonbuk" value="10">
-			    <div class="checkmark1"></div>
-				</label>
-				
-				<label class="container1" style="top:53%; left: 73%;">
-					<div id="displayText10" class="display-text" style="display: none;">장수</div>
-			    <input type="checkbox" id="checkbox10" name="jeonbuk" value="11">
-			    <div class="checkmark1"></div>
-				</label>
-				
-				<label class="container1" style="top: 71%; left: 18%;">
-					<div id="displayText11" class="display-text" style="display: none;">고창</div>
-			    <input type="checkbox" id="checkbox11" name="jeonbuk" value="1">
-			    <div class="checkmark1"></div>
-				</label>
-				
-				<label class="container1" style="top: 73%; left: 47%;">
-					<div id="displayText12" class="display-text" style="display: none;">순창</div>
-			    <input type="checkbox" id="checkbox12" name="jeonbuk" value="7">
-			    <div class="checkmark1"></div>
-				</label>
-				
-				<label class="container1" style="top: 30%; left: 82%;">
-					<div id="displayText13" class="display-text" style="display: none;">무주</div>
-			    <input type="checkbox" id="checkbox13" name="jeonbuk" value="5">
-			    <div class="checkmark1"></div>
-				</label>
-				
-				<label class="container1" style="top: 74%; left: 66%;">
-					<div id="displayText14" class="display-text" style="display: none;">남원</div>
-			    <input type="checkbox" id="checkbox14" name="jeonbuk" value="4">
-			    <div class="checkmark1"></div>
-				</label>
-				
-				<button class="container1" style="bottom: 5%; right: 0%;" type="reset" onclick="resetDisplayTexts()">
-					reset
-				</button>
-				
-				<button class="container1" style="bottom: 0%; right: 0%;">
-					submit
-				</button>
-				
-				</form>
-				
-			</span>
-		</div>
-		<div class="sidebar">
-			<span class="area_desc">
-			  <a href="/member/signUp">signUp</a><br>
-			  <th:block th:if="${session.user == null}">
-			  	<a href="/member/login">login</a><br>
-			  </th:block>
-			  <th:block th:if="${session.user != null}">
-			  	<a href="/member/logout">logout</a><br>
-			  	<a href="/member/myPage">myPage</a><br>
-			  </th:block>
-			  <a href="/member/like">like</a><br>
-			  <a href="/place/mapAPI">mapAPI</a><br>
-        <a href="/member/customer">customer</a><br>
-        <a href="/member/detail">상세페이지</a>
-			</span>
 		</div>
 	</div>
 	
-	<footer>
-		<hr>
-		<div>회사소개  |  이용약관  |  등등...</div>
-	</footer>
-	
-	<script>
-		document.addEventListener('DOMContentLoaded', function() {
-	  	var checkboxes = document.querySelectorAll('.container1 input[type="checkbox"]');
-	
-	    checkboxes.forEach(function(checkbox, index) {
-	    	var displayText = document.getElementById('displayText' + (index + 1));
-	
-	      checkbox.addEventListener('change', function() {
-	      	if (checkbox.checked) {
-	        	displayText.style.display = 'block';
-	        }
-	      	else {
-	        	displayText.style.display = 'none';
-	        }
-	      });
-	    });
-		});
-		
-		function resetDisplayTexts() {
-			const displayTexts = document.querySelectorAll('.display-text');
-		  displayTexts.forEach(text => {
-		  	text.style.display = 'none';
-		  });
-		}
-		function validateForm() {
-			var checkboxes = document.querySelectorAll('.container1 input[type="checkbox"]:checked');
-			if (checkboxes.length === 0) {
-				alert("최소 1개 이상의 항목을 선택해주세요.");
-				return false;
-			}
-			else if (checkboxes.length > 3) {
-				alert("최대 3개 항목만 선택할 수 있습니다.");
-				return false;
-			}
-			return true;
-		}
-	</script>
-	
+<th:block th:replace="/fragment::footer"></th:block>
 </body>
 </html>
