--- a/www/src/main/resources/templates/home.html
+++ b/www/src/main/resources/templates/home.html
@@ -10,15 +10,14 @@
 </head>
 <body>
 
-
 	<th:block th:replace="/fragment::header"></th:block>
 	
 
   
-  <div class="sidebar-left">
+  <div class="sidebar-left" id="weather">
     <span class="area_desc">
           <!-- 왼쪽 사이드바 (날씨 정보) -->
-    <div class="sidebar">
+    <div>
         <h1>[[${city}]]</h1>
         
 
@@ -29,7 +28,20 @@
     <option value="Jeju">제주</option>
     <option value="Ulsan">울산</option>
     <option value="Gwangju">광주</option>
+    <option value="Daegu">대구</option>
     <option value="Gangneung">강릉</option>
+    <option value="Chuncheon">춘천</option>
+    <option value="Yeosu">여수</option>
+    <option value="Incheon">인천</option>
+    <option value="Suwon">수원</option>
+    <option value="Cheongju">청주</option>
+    <option value="Andong">안동</option>
+    <option value="Pohang">포항</option>
+    <option value="Daejeon">대전</option>
+    <option value="Jeonju">전주</option>
+    <option value="Changwon">창원</option>
+    <option value="Mokpo">목포</option>
+    <option value="Hongseong">홍성</option>
 </select>
 
         <div class="weather-info">
@@ -38,7 +50,7 @@
             <div>온도: [[${#numbers.formatDecimal(weather.main.temp - 273.15, 0, 1)}]] ℃</div>
             
             <!-- 체감 온도 변환: K -> ℃ (소수점 한 자리) -->
-            <div>체감 온도: [[${#numbers.formatDecimal(weather.main.feels_like - 273.15, 0, 1)}]] ℃</div>
+            <div>체감온도: [[${#numbers.formatDecimal(weather.main.feels_like - 273.15, 0, 1)}]] ℃</div>
             
             <!-- 날씨 설명 -->
             <div>날씨: [[${weather.weather[0].description}]]</div>
