--- a/www/src/main/resources/templates/member/customer.html
+++ b/www/src/main/resources/templates/member/customer.html
@@ -30,8 +30,29 @@
 			</div>
 			<div class="intro-text">
 				<h2>기업소개</h2>
-				<p>여기는 기업 소개 섹션입니다. 기업의 역사, 가치, 미션 등을 소개합니다.</p>
-			</div>
+				<pre>
+Traverse는 여행을 사랑하는 모든 사람들에게 영감을 주고, 쉽게 여행을 계획하며, 
+잊지 못할 추억을 남길 수 있도록 도와주는 국내 여행 플랫폼입니다.
+
+Traverse는 프랑스어 "traverser"에서 유래하여, '건너다'라는 의미를 지니고 있습니다. 
+이 이름은 경계를 넘고 새로운 장소를 탐험하는 여행의 본질을 잘 담고 있습니다. 
+우리의 목표는 여러분이 일상에서 벗어나 국내의 아름다운 곳곳을 경험하고, 
+새로운 경계를 넘어서는 여정을 즐길 수 있도록 지원하는 것입니다.
+
+Traverse를 통해 여러분은:
+
+여행 추천 받기: 
+	다양한 테마와 목적에 맞는 여행지를 추천받아, 나만의 여행을 시작할 수 있습니다.
+여행 계획 세우기: 
+	추천받은 여행지를 바탕으로 여행 일정을 쉽게 계획하고 관리할 수 있습니다.
+여행 후기와 사진 공유하기: 
+	여행을 마친 후, 간단한 후기와 사진을 공유하여 다른 여행자들과 추억을 나눌 수 있습니다.
+
+우리의 서비스는 국내 여행에 초점을 맞추고 있습니다. 
+여러분이 국내의 숨겨진 보석 같은 장소들을 발견하고, 새로운 경험을 할 수 있도록 도와줍니다. 
+
+Traverse와 함께 경계를 넘어 전국을 탐험하며, 잊지 못할 여정을 떠나세요!
+			</pre></div>
 		</div>
 	</section>
 
