--- a/www/src/main/resources/templates/member/login.html
+++ b/www/src/main/resources/templates/member/login.html
@@ -12,21 +12,30 @@
 
   <th:block th:replace="/fragment::header"></th:block>
       
- <fieldset>
-  <legend>로그인</legend>
+  <div class="form-container">
+  <form method="post" class="form">
   
-  <form method="post">
-  <p><input name="userid" placeholder="ID" required type="text"></p>
-  <p><input name="userpw" placeholder="PW" type="password" required></p>
+	  <span class="input-span">
+	    <label for="userid" class="label">ID</label>
+	    <input name="userid" placeholder="ID" type="text" required id="userid"/>
+	  </span>
+	  
+	  <span class="input-span">
+    <label for="password" class="label">Password</label>
+    <input name="userpw" placeholder="PW" type="password" required id="password"/>
+  	</span>
+  	
+  	<span class="span">
+		  <a href="findID">Forgot ID?</a>
+		  <span> or </span>
+		  <a href="findPW">Password?</a>
+		</span>
+  	<input class="submit" type="submit" value="Log in" />
+  	<span class="span">Don't have an account? <a href="signUp">Sign up</a></span>
   
-  <a href="findID">ID 찾기</a>
-  <a href="findPW">PW 찾기</a>
-  <a href="signUp">회원가입</a>
-  
-  <button>로그인</button>
   </form>
+  </div>
   
-</fieldset>
 <th:block th:replace="/fragment::footer"></th:block>
   
 </body>
