--- a/www/src/main/resources/static/css/likeStyle.css
+++ b/www/src/main/resources/static/css/likeStyle.css
@@ -17,13 +17,14 @@
     font-family: Arial, sans-serif;
     margin: 0 auto;
     background-color: #f9f9f9;
-    padding-top: 60px; /* 여기서 20px의 상단 여백을 추가 */
+    margin-top: 0px;
+    padding-top: 0px;
     display: flex;
     height: 100vh;
     width: 1200px;
-  overflow: hidden;
-  overflow-y: auto; /* 수직 스크롤만 허용 */
-  justify-content: center;
+  	overflow: hidden;
+  	overflow-y: auto; /* 수직 스크롤만 허용 */
+  	justify-content: center;
     align-items: flex-start;
     padding: 0;
 }
@@ -35,7 +36,8 @@
     justify-content: flex-start; /* 왼쪽부터 요소들이 시작되도록 설정 */
     align-items: flex-start; /* 요소들을 위쪽으로 정렬 */
     gap: 0; /* 요소들 사이의 간격을 완전히 없앰 */
-    margin-top: 60px; /* 여기서 20px의 상단 여백을 추가 */
+    margin-top: 0px;
+    padding-top: 0px;
     max-height: 90vh;
     max-width: 400px;
     overflow-y: auto;
@@ -115,12 +117,17 @@
 #like button {
     background-color: #4CAF50;
     color: white;
-    padding: 10px 20px;
+    padding: 8px 13px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
     transition: background-color 0.3s ease;
+   	margin-top:34px;
 }
+#like .delete-button {
+    margin-top: 10px; /* 버튼을 아래로 내리기 위해 상단 여백 조정 */
+}
+
 
 #like button:hover {
     background-color: #45a049;
@@ -129,7 +136,7 @@
 #like #map {
     width: 100%;
     height: 100%;
-    margin-top: 60px; /* 여기서 20px의 상단 여백을 추가 */
+    margin-top: 0px; /* 여기서 20px의 상단 여백을 추가 */
 }
 
 /* From Uiverse.io by waleedlh10 */
@@ -222,7 +229,7 @@
 
  #like  .wrap {
     position: relative;
-    width: 250px;
+    width: 320px;
     border-radius: 10px;
     overflow: hidden;
     background: white; /* 배경색 추가 */
