--- a/www/src/main/resources/templates/member/like.html
+++ b/www/src/main/resources/templates/member/like.html
@@ -26,15 +26,26 @@
             <div class="scrollable-content">
                 <div class="location-item" th:each="row : ${mapAPI}">
                     <div class="image-box">
-                        <img id="place_img" th:src="${row.place_img}" />
+                        
+                        
+            <!-- 이미지가 있을 때 -->
+            <img id="place_img" th:if="${row.firstimage != null and !row.firstimage.isEmpty()}"
+                 th:src="${row.firstimage}" alt="Image" />
+
+
+
+            <!-- 이미지가 없을 때 -->
+            <img id="place_img" th:if="${row.firstimage == null or row.firstimage.isEmpty()}"
+                 th:src="@{/image/logo_w.png}" alt="Default Image" />
+                        
                     </div>
                     <div class="text-box">
-                        <div class="location-name" th:text="${row.place_name}"></div>
-                        <div class="location-detail" th:text="${row.place_add}"></div>
+                        <div class="location-name" th:text="${row.title}"></div>
+                        <div class="location-detail" th:text="${row.addr1}"></div>
                     </div>
                     <div class="con-like">
                         <input class="like" type="checkbox" title="like"
-                            th:onclick="|toggleMarker(this,${row.place_x},${row.place_y})|">
+                            th:onclick="|toggleMarker(this,${row.mapx},${row.mapy})|">
                  
                             
                         <div class="checkmark">
@@ -85,7 +96,7 @@ function toggleMarker(check, x, y) {
 
     if (check.checked) {
         var marker = new kakao.maps.Marker({
-            position: new kakao.maps.LatLng(x, y),
+            position: new kakao.maps.LatLng(y, x),
             map: map
         });
         markers[key] = marker; 
