--- a/www/src/main/resources/templates/fragment.html
+++ b/www/src/main/resources/templates/fragment.html
@@ -52,8 +52,10 @@
         <a href="/member/index">길찾기</a><br>
         <a href="/place/traverserStory">Traverser's Story</a>
       </span>
+      <label for="menuicon"></label>
     </div>
   </div>
+    <label for="menuicon" class="background"></label>
   
    <footer>
     <hr>
