--- a/www/src/main/resources/static/css/footerStyle.css
+++ b/www/src/main/resources/static/css/footerStyle.css
@@ -6,7 +6,7 @@
     line-height: 1.6;
     margin: 0 auto;
     padding: 20px;
-    background-color: #f4f4f4;
+    background-color: #E2E2E2;
     color: #333;
 }
 
@@ -57,7 +57,7 @@ ul {
     margin-top: 10px;
 }
 
-div {
+.footer div {
     margin-top: 10px;
     padding-left: 20px;
     color: #555;
