--- a/www/src/main/resources/static/css/mainStyle.css
+++ b/www/src/main/resources/static/css/mainStyle.css
@@ -36,6 +36,8 @@ input[id="menuicon"] {
 
 header {
    width: 100%;
+   position: relative;
+   z-index: 4;
 }
 
 header > div {
@@ -167,19 +169,73 @@ th, td {
 	padding: 5px 10px;
 }
 
+
+.sidebar {
+	position: fixed;
+	top: 0;
+	right: -3000px;
+	width: 300px;
+	height: 100%;
+	background: #E2E2E2;
+	transition: all .35s;
+	z-index: 50;
+}
+
+.sidebar label[for*='menuicon'] {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: -1;
+	/* 요소가 없는 부분을 클릭하면 메뉴버튼 닫기 */
+}
+
+.background {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(0, 0, 0, .5);
+	transition: all .35s;
+	opacity: 0;
+	visibility: hidden;
+	z-index: 20;
+}
+
+input#menuicon:checked ~ header label {
+	background-position: -24px 0;
+}
+
+input#menuicon:checked ~ .sidebar {
+	right: 0;
+}
+
+input#menuicon:checked ~ .background {
+	opacity: 1;
+	visibility: visible;
+}
+
+.sidebar a:hover {
+	text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+	transition: all 0.3s ease;
+}
+
+
 footer {
    width: 1200px;
    margin: 0 auto;
-   min-height: 60px;
-    padding: 20px;
+   min-height: 50px;
+    padding: 10px 10px 0 10px;
     text-align: center;
 }
 
 footer hr {
     border: none;
     border-top: 1px solid #ccc; /* 구분선 스타일 */
-    margin-bottom: 20px;
-    width: 1250px;
+    margin-bottom: 10px;
+    width: 1200px;
 }
 
 .footer-container {
