--- a/www/src/main/resources/static/css/likeStyle.css
+++ b/www/src/main/resources/static/css/likeStyle.css
@@ -9,8 +9,9 @@
 }
 
 #like .scrollable-content {
-    max-height: 80vh; /* 전체 높이의 80%만큼 제한 */
+    max-height: 640px;
     padding-right: 10px; /* 스크롤바를 고려한 패딩 */
+    width: 365px;
 }
 
 #like{
@@ -20,7 +21,7 @@
     margin-top: 0px;
     padding-top: 0px;
     display: flex;
-    height: 100vh;
+    height: 700px;
     width: 1200px;
   	overflow: hidden;
   	overflow-y: auto; /* 수직 스크롤만 허용 */
@@ -44,14 +45,13 @@
 }
 
 #like .left {
-    width: 375px; /* 왼쪽 영역의 고정 너비를 설정 */
+    width: 390px; /* 왼쪽 영역의 고정 너비를 설정 */
     overflow-y: auto; /* 세로 스크롤을 추가 */
-    max-height: 870px; /* 최대 높이를 설정하여 스크롤이 생기도록 함 */
     margin-right: 0; /* 오른쪽 여백 제거 */
     background-color: #ffffff;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
-    height: 100%;
+    height: 700px;
 }
 
 /* 스크롤바 스타일링 */
@@ -117,12 +117,13 @@
 #like button {
     background-color: #4CAF50;
     color: white;
-    padding: 8px 13px;
+    padding: 8px 10px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
     transition: background-color 0.3s ease;
-   	margin-top:34px;
+   	margin-top:55px;
+   	width: 60px;
 }
 #like .delete-button {
     margin-top: 10px; /* 버튼을 아래로 내리기 위해 상단 여백 조정 */
@@ -163,6 +164,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.checkmark {
+	position: absolute;
+	top: 5px;
+	left: 5px;
 }
 
 #like .con-like .outline,
