--- a/www/src/main/resources/templates/place/travelplandetail.html
+++ b/www/src/main/resources/templates/place/travelplandetail.html
@@ -1,121 +1,91 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
-<link href="/css/mainStyle.css" rel="stylesheet">
-<link href="/css/likeStyle.css" rel="stylesheet">
-
+    <meta charset="UTF-8">
+    <title>Travel Plan Detail</title>
+    <link href="/css/mainStyle.css" rel="stylesheet">
+    <link href="/css/tabStyle.css" rel="stylesheet">
 </head>
 <body>
 
 <th:block th:replace="/fragment::header"></th:block>
 
-<div id="like">
-  <div class="container">
-        <div class="left">
+<div th:if="${Planplace.size() > 0}">
+    <div class="tab-menu">
+        <button th:each="i : ${#numbers.sequence(1, Planplace[0].duration)}"
+                th:text="'Day ' + ${i}"
+                th:onclick="'openTab(event, \'tab' + ${i} + '\', '+ ${i} +', this.getAttribute(\'data-seldate\'))'"
+                th:data-seldate="${Planplace[0].seldate}"
+                class="tab-link">
+        </button>
+    </div>
 
-            <!-- 스크롤 가능한 내용 -->
-            <div class="scrollable-content">
-                <div class="location-item" th:each="row : ${Planplace}">
-                    <div class="image-box">
-                        <img id="place_img" th:src="${row.firstimage}" />
-                    </div>
-                    <div class="text-box">
-                        <div class="location-name" th:text="${row.title}"></div>
-                        <div class="location-detail" th:text="${row.addr1}"></div>
-                    </div>
-                    <div class="con-like">
-                        <input class="like" type="checkbox" title="like"
-                            th:onclick="|toggleMarker(this,${row.mapx},${row.mapy})|">
-                        <div class="checkmark">
-                            <!-- 하트 아이콘 -->
-                            <svg xmlns="http://www.w3.org/2000/svg" class="outline" viewBox="0 0 24 24">
-                                <path d="M17.5,1.917a6.4,6.4,0,0,0-5.5,3.3,6.4,6.4,0,0,0-5.5-3.3A6.8,6.8,0,0,0,0,8.967c0,4.547,4.786,9.513,8.8,12.88a4.974,4.974,0,0,0,6.4,0C19.214,18.48,24,13.514,24,8.967A6.8,6.8,0,0,0,17.5,1.917Zm-3.585,18.4a2.973,2.973,0,0,1-3.83,0C4.947,16.006,2,11.87,2,8.967a4.8,4.8,0,0,1,4.5-5.05A4.8,4.8,0,0,1,11,8.967a1,1,0,0,0,2,0,4.8,4.8,0,0,1,4.5-5.05A4.8,4.8,0,0,1,22,8.967C22,11.87,19.053,16.006,13.915,20.313Z"></path>
-                            </svg>
-                            <svg xmlns="http://www.w3.org/2000/svg" class="filled" viewBox="0 0 24 24">
-                                <path d="M17.5,1.917a6.4,6.4,0,0,0-5.5,3.3,6.4,6.4,0,0,0-5.5-3.3A6.8,6.8,0,0,0,0,8.967c0,4.547,4.786,9.513,8.8,12.88a4.974,4.974,0,0,0,6.4,0C19.214,18.48,24,13.514,24,8.967A6.8,6.8,0,0,0,17.5,1.917Z"></path>
-                            </svg>
-                            <svg xmlns="http://www.w3.org/2000/svg" height="100" width="100" class="celebrate">
-                                <polygon class="poly" points="10,10 20,20"></polygon>
-                                <polygon class="poly" points="10,50 20,50"></polygon>
-                                <polygon class="poly" points="20,80 30,70"></polygon>
-                                <polygon class="poly" points="90,10 80,20"></polygon>
-                                <polygon class="poly" points="90,50 80,50"></polygon>
-                                <polygon class="poly" points="80,80 70,70"></polygon>
-                            </svg>
-                        </div>
-                 
-                    </div>
-                </div>
-            </div> <!-- scrollable-content 종료 -->
-        </div> <!-- left 종료 -->
-    </div> <!-- container 종료 -->
-
-    <div id="map" style="width: 800px; height: 900px;"></div>
-
-    <script type="text/javascript"
-        src="//dapi.kakao.com/v2/maps/sdk.js?appkey=a1a7717c2c3bc1327ef51412b55ac5ef"></script>
-
-    <script>
-        var mapContainer = document.getElementById('map'), // 지도를 표시할 div  
-        mapOption = {
-            center : new kakao.maps.LatLng(35.181431, 128.9464563), // 지도의 중심좌표
-            level : 5
-        // 지도의 확대 레벨
-        };
-
-        var map = new kakao.maps.Map(mapContainer, mapOption); // 지도를 생성합니다
-
-        var markers = {}; // 마커를 저장할 객체 (key-value pair로 관리)
-
-        function toggleMarker(check, x, y) {
-            var key = x + ',' + y; // x,y 좌표를 문자열로 결합하여 키로 사용
-
-            if (check.checked) {
-                var marker = new kakao.maps.Marker({
-                    position: new kakao.maps.LatLng(x, y),
-                    map: map
-                });
-                markers[key] = marker; // 마커를 객체에 저장
-            } else {
-                if (markers[key]) {
-                    markers[key].setMap(null); // 마커를 지도에서 제거
-                    delete markers[key]; // 객체에서 마커 삭제
-                }
-            }
-        }
-     
-        // 삭제 버튼 클릭 시 선택된 항목 삭제
-        function deleteSelectedItems() {
-            var checkedItems = document.querySelectorAll('.like:checked');
-            checkedItems.forEach(function(item) {
-                var locationItem = item.closest('.location-item');
-                if (locationItem) {
-                    locationItem.remove(); // 해당 항목을 DOM에서 제거
-                }
-            });
-        }
-      
-        // 전체 선택/해제 처리 및 마커 업데이트
-        function toggleSelectAllLikes(selectAllCheckbox) {
-            var likeCheckboxes = document.querySelectorAll('.like');
-            likeCheckboxes.forEach(function(checkbox) {
-                checkbox.checked = selectAllCheckbox.checked;
-                checkbox.dispatchEvent(new Event('click'));  // 강제로 클릭 이벤트 발생시켜 마커 업데이트
-              
-                var x = checkbox.getAttribute('data-x');
-                var y = checkbox.getAttribute('data-y');
-
-                if (x && y) {
-                    toggleMarker(checkbox, x, y);
-                }
-            });
-        }
-    </script>
+    <div th:each="i : ${#numbers.sequence(1, Planplace[0].duration)}"
+         th:id="'tab' + ${i}"
+         class="tab-content">
+         
+    </div>
 </div>
-  
-  
+
+
+
+<script>
+    function openTab(evt, tabName,day,seldate) {
+        var i, tabcontent, tablinks;
+        // 모든 탭 콘텐츠 숨기기
+        tabcontent = document.getElementsByClassName("tab-content");
+        for (i = 0; i < tabcontent.length; i++) {
+            tabcontent[i].style.display = "none";
+            tabcontent[i].classList.remove("active");
+        }
+
+        // 모든 탭 링크에서 active 클래스 제거
+        tablinks = document.getElementsByClassName("tab-link");
+        for (i = 0; i < tablinks.length; i++) {
+            tablinks[i].classList.remove("active");
+        }
+
+        // 현재 탭 콘텐츠 표시
+        document.getElementById(tabName).style.display = "block";
+        document.getElementById(tabName).classList.add("active");
+
+        // 현재 탭 링크에 active 클래스 추가
+        evt.currentTarget.classList.add("active");
+        
+        fetch("http://localhost:8080/place/dayplan?day=" + day + "&seldate="+seldate, {method:"get"})
+        .then(response => response.json())
+        .then()
+        .then(data => {
+
+        var tabContentElement = document.getElementById(tabName);
+        tabContentElement.innerHTML = `<h4>Day ${day}</h4>`;
+
+        if (Array.isArray(data)) {
+
+            data.forEach(place => {
+                tabContentElement.innerHTML += `
+                    <div>
+                        ${place.firstimage ? `<img src="${place.firstimage}" width="150px" height="100px">` : `<img src="/image/logo_w.png" width="150px" height="100px">`}
+                        <p>장소: ${place.title}</p>
+                        <p>주소: ${place.addr1}</p>
+                    </div>
+                `;
+            });
+        } else {
+            tabContentElement.innerHTML += `<p>No places available for this day.</p>`;
+        }
+    })
+        
+    }
+
+    // 첫 번째 탭을 기본적으로 열기
+    document.addEventListener("DOMContentLoaded", function() {
+        var firstTab = document.querySelector(".tab-menu button");
+        if (firstTab) {
+            firstTab.click();
+        }
+    });
+</script>
 <th:block th:replace="/fragment::footer"></th:block>
 </body>
 </html>
