--- a/www/src/main/resources/templates/recommendResult.html
+++ b/www/src/main/resources/templates/recommendResult.html
@@ -5,127 +5,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>traverse</title>
     <link href="/css/mainStyle.css" rel="stylesheet">
+    <link href="/css/tabStyle.css" rel="stylesheet">
 
-    <style>
-        /* 탭 스타일  나중에 분리예정 */
-        .tabs {
-            display: flex;
-            margin-bottom: 20px;
-            cursor: pointer;
-            justify-content: flex-start;
-            gap: 5px; /* 탭 간의 간격을 추가 */
-        }
-
-        .tab {
-            padding: 10px 20px;
-            border-radius: 5px 5px 0 0;
-            border: 1px solid #ccc;
-            background-color: #e0e0e0;
-            color: #333;
-            transition: background-color 0.3s ease, box-shadow 0.3s ease;
-        }
-
-        .tab:hover {
-            background-color: #d0d0d0;
-        }
-
-        .tab.active {
-            background-color: #ffffff;
-            font-weight: bold;
-            color: #000;
-            border-bottom: 2px solid #000;
-            box-shadow: 0px -3px 5px rgba(0, 0, 0, 0.1); /* 활성화된 탭에 음영 추가 */
-            z-index: 1;
-        }
-
-        .tab-content {
-            display: none;
-            border: 1px solid #ccc;
-            padding: 20px;
-            background-color: #fff;
-            border-radius: 0 5px 5px 5px;
-            box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.1);
-        }
-
-        .tab-content.active {
-            display: block;
-        }
-        
-        /* 테이블 스타일 */
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-top: 10px;
-            font-family: 'Arial', sans-serif;
-        }
-
-        th, td {
-            padding: 12px;
-            text-align: left;
-            border-bottom: 1px solid #ddd;
-        }
-
-        th {
-            background-color: #f4f4f4;
-            color: #333;
-            font-weight: bold;
-        }
-
-        tr:hover {
-            background-color: #f1f1f1;
-        }
-
-        tr:nth-child(even) {
-            background-color: #f9f9f9;
-        }
-
-        a {
-            color: #007BFF;
-            text-decoration: none;
-        }
-
-        a:hover {
-            text-decoration: underline;
-        }
-
-        .add-button {
-            text-align: center;
-            font-size: 20px;
-            font-weight: bold;
-            color: #28a745;
-            transition: color 0.3s ease;
-        }
-
-        .add-button:hover {
-            color: #218838;
-        }
-    </style>
 </head>
 <body>
 
     <th:block th:replace="/fragment::header"></th:block>
-    <span class="area_desc"> 추천 결과 보여주는 페이지
-        <div class="table-container">
-            <!-- 탭 메뉴 -->
-            <div class="tabs">
-                <div th:each="i : ${#numbers.sequence(1, result.duration/5)}" th:text="'Day ' + ${i}" th:classappend="${i == 1} ? 'active' : ''" class="tab"></div>
-            </div>
-           
-            <!-- 각 탭에 대한 컨텐츠 -->
-            <div th:each="i : ${#numbers.sequence(1, result.duration/5)}" th:id="'day' + ${i}" th:classappend="${i == 1} ? 'active' : ''" class="tab-content">
-                <h3 th:text="'Day ' + ${i}"></h3>
-                <table>
+    <div class="tab-menu">
+        <button th:each="i : ${#numbers.sequence(1, result.duration/5)}"
+                th:text="'Day ' + ${i}"
+                th:onclick="'openTab(event, \'tab' + ${i} + '\')'"
+                class="tab-link">
+        </button>
+    </div>
+    <div th:each="i : ${#numbers.sequence(1, result.duration/5)}"
+         th:id="'tab' + ${i}"
+         class="tab-content">
+             <h3 th:text="'Day ' + ${i}"></h3>
+                <table class="placetable">
                     <tr>
-                        
-                        <th>title</th>
-                        <th>address</th>
+                        <th>사진</th>
+                        <th>장소</th>
+                        <th>주소</th>
                         <th></th>
                     </tr>
                     <!-- place 목록을 표시하는 테이블 -->
                     <tr th:each="row : ${place}">
-                        
+                    
+                        <td class="planimg">
+                          <img th:if="${row.firstimage != null and !row.firstimage.isEmpty()}"
+						                 th:src="${row.firstimage}" alt="Image" />
+						
+							            <!-- 이미지가 없을 때 -->
+							            <img th:if="${row.firstimage == null or row.firstimage.isEmpty()}"
+						                 th:src="@{/image/logo_w.png}" alt="Default Image" />
+                        </td>
                         <td class="normal">
-                            <!-- 제목을 클릭하면 해당 상세 페이지로 이동 -->
                             <a th:href="@{/member/detail/{idx}(idx=${row.idx})}" th:text="${row.title}"></a>
                         </td>
                         <td th:text="${row.addr1}"></td>
@@ -144,34 +59,33 @@
                         </th>
                     </tr>
                 </table>
-            </div>
-        </div>
-        <br>
-        <a th:href="@{place/travelplan}"><button>여행계획</button></a>
-    </span>
+    </div>
+    
+    
+  <script>
+    function openTab(evt, tabName) {
+        var i, tabcontent, tablinks;
+        tabcontent = document.getElementsByClassName("tab-content");
+        for (i = 0; i < tabcontent.length; i++) {
+            tabcontent[i].style.display = "none";
+            tabcontent[i].classList.remove("active");
+        }
 
+        tablinks = document.getElementsByClassName("tab-link");
+        for (i = 0; i < tablinks.length; i++) {
+            tablinks[i].classList.remove("active");
+        }
+
+        document.getElementById(tabName).style.display = "block";
+        document.getElementById(tabName).classList.add("active");
+        evt.currentTarget.classList.add("active");
+    }
+
+    document.addEventListener("DOMContentLoaded", function() {
+        document.querySelector(".tab-menu button").click();
+    });
+</script>
+    
     <th:block th:replace="/fragment::footer"></th:block>
-
-    <script>
-        // JavaScript로 탭 기능을 구현합니다.
-        document.addEventListener('DOMContentLoaded', function () {
-            const tabs = document.querySelectorAll('.tab');
-            const tabContents = document.querySelectorAll('.tab-content');
-
-            tabs.forEach((tab, index) => {
-                tab.addEventListener('click', () => {
-                    // 모든 탭에서 active 클래스를 제거
-                    tabs.forEach(t => t.classList.remove('active'));
-                    // 모든 탭 컨텐츠에서 active 클래스를 제거
-                    tabContents.forEach(tc => tc.classList.remove('active'));
-
-                    // 클릭된 탭에 active 클래스 추가
-                    tab.classList.add('active');
-                    // 해당하는 탭 컨텐츠에 active 클래스 추가
-                    tabContents[index].classList.add('active');
-                });
-            });
-        });
-    </script>
 </body>
 </html>
