--- a/www/src/main/resources/templates/member/detail.html
+++ b/www/src/main/resources/templates/member/detail.html
@@ -196,7 +196,8 @@ document.addEventListener("DOMContentLoaded", function() {
     addr1: "[[${detail.addr1}]]",
     firstimage: "[[${detail.firstimage}]]",
     mapx: [[${detail.mapx}]],
-    mapy: [[${detail.mapy}]]
+    mapy: [[${detail.mapy}]],
+    p_idx: [[${detail.p_idx}]]
 };
 
         fetch('/member/like', {
