--- a/www/src/main/resources/templates/member/detail.html
+++ b/www/src/main/resources/templates/member/detail.html
@@ -197,7 +197,7 @@ document.addEventListener("DOMContentLoaded", function() {
     firstimage: "[[${detail.firstimage}]]",
     mapx: [[${detail.mapx}]],
     mapy: [[${detail.mapy}]],
-    p_idx: [[${detail.p_idx}]]
+    p_idx: [[${detail.idx}]]
 };
 
         fetch('/member/like', {
