--- a/www/src/main/resources/templates/member/myPage.html
+++ b/www/src/main/resources/templates/member/myPage.html
@@ -44,11 +44,11 @@
                         <img th:src="@{'/image/' + ${session.user.profile}}" alt="Profile Image" style="width: 150px; height: 150px;" />
 
                     </div>
-                    <!-- 이미지 업로드 폼 -->
+                    <!-- 이미지 업로드 폼 
                     <form method="POST" enctype="multipart/form-data" th:action="@{/member/uploadProfile}">
                         <input type="file" name="profileImage" accept="image/*" />
                         <button type="submit">업로드</button>
-                    </form>
+                    </form>-->
                     
                 </td>
             </tr>
