--- a/www/src/main/resources/templates/member/update.html
+++ b/www/src/main/resources/templates/member/update.html
@@ -31,6 +31,14 @@
       
       <button>modify</button>
    </form>
+    <div th:if="${session.user.profile}">
+     <img th:src="@{'/image/' + ${session.user.profile}}" alt="Profile Image" style="width: 150px; height: 150px;" />
+    </div>  
+   <form method="POST" enctype="multipart/form-data" th:action="@{/member/uploadProfile}">
+     <input type="file" name="profileImage" accept="image/*" />
+     <button type="submit">업로드</button>
+   </form>
+   
    <th:block th:replace="/fragment::footer"></th:block>
 </body>
 </html>
