--- a/www/src/main/resources/templates/place/story_write.html
+++ b/www/src/main/resources/templates/place/story_write.html
@@ -68,6 +68,7 @@
             newFileInput.accept = 'image/*';
             fileInputContainer.appendChild(newFileInput);
         }
+
     </script>
 </head>
 <body>
@@ -98,7 +99,7 @@
 
         <div class="form-group">
             <label for="contents">내용</label>
-            <textarea id="contents" name="contents" rows="10" required></textarea>
+            <textarea id="contents" name="contents" rows="10"></textarea>
         </div>
 
         <div class="form-group">
