--- a/www/src/main/resources/templates/place/tsResult.html
+++ b/www/src/main/resources/templates/place/tsResult.html
@@ -15,10 +15,28 @@
 		
 	<h1>Search Results</h1>
   <p>검색어: <span th:text="${search}"></span></p>
-
+      <table >
+              <thead>
+                  <tr>
+                      <th>Title</th>
+                      <th>Region</th>
+                      <th>Dates</th>
+                      <th>Views</th>
+                      <th>Author</th>
+                  </tr>
+              </thead>
+              <tbody>
+                  <tr th:each="story : ${result}">
+                      <td><a th:href="@{/place/story/{idx}(idx=${story.idx})}" th:text="${story.title}"></a></td>
+                      <td th:text="${story.regin}"></td>
+                      <td th:text="${story.seldate + ' - ' + story.enddate}"></td>
+                      <td th:text="${story.v_count}"></td>
+                      <td th:text="${story.nick}"></td>
+                  </tr>
+              </tbody>
+          </table>
 		</div>
 	</div>
-	
 	
 	
 	<th:block th:replace="/fragment::footer"></th:block>
